# FednnUNet

./: .gitignore  install.sh  pyproject.toml  readme.md
fednnunet/: client.py  client_entrypoints.py  fednnUNetTrainer.py  run.py  run_training.py  server.py
fednnunet/dataset_conversion/: Dataset027_ACDC_MNMs_labels.py  Dataset333_MNMs3.py
